--- a/test/pom.xml
+++ b/test/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.home.servlet</groupId>
+  <groupId>com.test.simpleServlet</groupId>
   <artifactId>ServletSample</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <name>ServletSample Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
@@ -36,6 +36,19 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <server>TomcatServer</server>
+                <path>/TestServlet</path>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
+
 </project>
