--- a/firstServlet/src/main/webapp/WEB-INF/web.xml
+++ b/firstServlet/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 <web-app>
     <display-name>FIRST SERVLET</display-name>
 
+    <welcome-file-list>
+        <welcome-file>
+            calculator.jsp
+        </welcome-file>
+    </welcome-file-list>
 
     <servlet>
         <servlet-name>calculator</servlet-name>
